<resources>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="TAG_HOME_FRAGMENT">HOME_FRAGMENT</string>
    <string name="TAG_EDIT_CATEGORY_FRAGMENT">EDIT_CATEGORY_FRAGMENT</string>
    <string name="TAG_DRINKS_FRAGMENT">DRINKS_FRAGMENT</string>
    <string name="TAG_MEALS_FRAGMENT">MEALS_FRAGMENT</string>
    <string name="TAG_EVENTS_FRAGMENT">EVENTS_FRAGMENT</string>
    <string name="TAG_OFFERS_FRAGMENT">OFFERS_FRAGMENT</string>

    <string name="title_activity_create_drink">Añadir bebida nueva</string>
    <string name="title_activity_create_meal">Añadir comida nueva</string>
    <string name="title_activity_create_event">Añadir evento nuevo</string>
    <string name="title_activity_create_offer">Añadir oferta nueva</string>

    <string name="title_fragment_drinks">Bebidas</string>
    <string name="title_fragment_meals">Comidas</string>
    <string name="title_fragment_events">Eventos</string>
    <string name="title_fragment_offers">Ofertas</string>

    <string name="action_settings">Settings</string>
    <string name="category_item_transitionName">categoryItemTransitionName</string>
    <string name="action_done">Confirmar</string>
    <string name="save">Guardar</string>
    <string name="empty_list">No hemos encontrado nada… :(</string>
    <string name="action_add">Añadir</string> <string name="name">Nombre</string>
    <string name="price">Precio</string>
    <string name="description">Descripción</string>
    <string name="delete">Eliminar</string>
    <string name="title_activity_who_we_are">¿Quienes somos?</string>
    <string name="free_event">Entrada gratuita</string>
    <string name="title_activity_edit_event">Editar evento</string>
    <string name="start_time">Hora de inicio</string>
    <string name="end_time">Hora de fin</string>
    <string name="date">Fecha</string>
    <string name="ticket_event">Entrada: %s</string>
    <string name="version_name">Version %s</string>
    <string name="iso_simbol">€</string>
    <string name="author">Developed by Borja Salazar Rey</string>
    <string name="offer_include">¿Que incluirá la oferta?</string>
    <string name="write_here">Escribe aqui</string>
    <string name="obligatory_name">El nombre es obligatorio primo!</string>
    <string name="free_offer">GRATIS!!</string>
    <string name="default_error">Ups! Hubo un error inesperado</string>
    <string name="drink_removed">Bebida eliminada</string>
    <string name="offer_removed">Oferta eliminada</string>
    <string name="meal_removed">Plato eliminado</string>
    <string name="event_removed">Evento eliminado</string>
    <string name="notif_title">Ya que estas cerca…</string>
    <string name="notif_msg">Por que no entras y tomas algo!</string>
    <string name="secret_cafe_name">Secret Café &amp; Copas</string>
    <string name="secret_address">Calle Ramón y Cajal, 43</string>
    <string name="administrator">Administrador</string>
    <string name="transitionName_cardBackground">cardBackground_TN</string>
    <string name="transitionName_image">image_TN</string>
    <string name="remove_confirm_dialog_title">¿Estás seguro?</string>
    <string name="remove_confirm_dialog_message">Si continuas se eliminara de forma permanente</string>
    <string name="continue_text">Continuar</string>
    <string name="cancel">Cancelar</string>
    <string name="transitionName_embellisher">embellecedor_TN</string>
    <string name="transitionName_name">name_TN</string>
    <string name="transitionName_description">description_TN</string>
    <string name="transitionName_price">price_TN</string>
    <string name="title_activity_scanner">Escaner</string>
    <string name="title_activity_discounts">Mis descuentos</string>
    <string name="title_activity_draw">Sortear descuentos</string>
    <string name="scanner">Escanear</string>
    <string name="nav_title_home">Inicio</string>
    <string name="nav_title_drinks">Bebidas</string>
    <string name="nav_title_events">Eventos</string>
    <string name="nav_title_sales">Ofertas</string>
    <string name="nav_title_meals">Para comer</string>
    <string name="nav_title_draw">Sortear descuentos</string>
    <string name="nav_title_draw_user">Mis descuentos</string>
    <string name="nav_title_item_we">Nosotros</string>
    <string name="nav_title_who_we_are">¿Quienes somos?</string>
    <string name="nav_title_about_us">Acerca de</string>
    <string name="draw">Sortear</string>
    <string name="draw_user_quantity">Hay %s usuarios activos.</string>
    <string name="draw_how_much_users">¿A cuantos quieres premiar?</string>
    <string name="expired_on">Caduca el %s</string>
    <string name="discount_accepted">¡Descuento canjeado!</string>
    <string name="discount_rejected">Descuento denegado</string>
    <string name="discount_accepted_detail">Este descuento ha sido validado y marcado como "usado".\nNo se podra volver a usar.</string>
    <string name="discount_already_used_detail">Este descuento ya ha sido canjeado anteriormente.</string>
    <string name="discount_expired_detail">Este descuento ha caducado.</string>
    <string name="discount_not_exist_detail">El descuento escaneado no existe.</string>
    <string name="some_went_wrong">Ups! Algo ha ido mal…</string>
    <string name="available">Disponible</string>
    <string name="spent">Canjeado</string>
    <string name="expired">Caducado</string>
    <string name="notify_users">Notificar a los usuarios</string>
</resources>
