<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_meal_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="30">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="5dp"
        android:transitionName="@string/transitionName_cardBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/image_meal_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_image_detail"
            android:scaleType="centerCrop"
            android:src="@drawable/default_image"
            android:transitionName="@string/transitionName_image" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_image_detail" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorPrimary">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <es.bsalazar.secretcafe.utils.ImpactTextView
                            android:id="@+id/name_meal_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSize_title_item"
                            android:transitionName="@string/transitionName_name"
                            tools:text="Legendario" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@drawable/color_accent_gradient"
                            android:transitionName="@string/transitionName_embellisher" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <TextView
                            android:id="@+id/meal_description_detail"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            tools:text="@string/lorem_ipsum"
                            android:textColor="@color/white2"
                            android:transitionName="@string/transitionName_description" />

                        <es.bsalazar.secretcafe.utils.ImpactTextView
                            android:id="@+id/meal_price_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSize_price_item"
                            android:transitionName="@string/transitionName_price"
                            tools:text="5,50 €" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:id="@+id/sticky_header_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            android:elevation="4dp"
            android:visibility="gone">

            <es.bsalazar.secretcafe.utils.ImpactTextView
                android:id="@+id/sticky_name_meal_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_title_item"
                android:transitionName="@string/transitionName_name"
                tools:text="Legendario" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/color_accent_gradient"
                android:transitionName="@string/transitionName_embellisher" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>