<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.bsalazar.secretcafe.app.about.AboutActivity"
    android:background="@drawable/side_nav_bar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:src="@drawable/logo_secret"/>

        <es.bsalazar.secretcafe.utils.ImpactTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/secret_cafe_name"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/admin_indicatior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white2"
            android:textSize="12sp"
            android:text="@string/administrator"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white2"
            tools:text="Version: 1.0.0"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:textColor="@color/colorPrimaryExtraLight"
        android:textSize="12sp"
        android:textStyle="italic"
        android:text="@string/author" />
</RelativeLayout>
