<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_offer_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="30">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="5dp"
        android:transitionName="@string/transitionName_cardBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/image_offer_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_image_detail"
            android:scaleType="centerCrop"
            android:src="@drawable/legendario"
            android:transitionName="@string/transitionName_image" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_image_detail"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/offer_header"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="vertical">

                        <es.bsalazar.secretcafe.utils.ImpactTextView
                            android:id="@+id/name_offer_detail"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/gray_gradient"
                            android:gravity="center_vertical"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:transitionName="@string/transitionName_name"
                            tools:text="Legendario" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@drawable/accent_gradient" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/offer_description_detail"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:textColor="@color/white2"
                        android:transitionName="@string/transitionName_description"
                        tools:text="@string/title_activity_discounts" />

                    <LinearLayout
                        android:id="@+id/offer_products_container"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"/>

                    <es.bsalazar.secretcafe.utils.ImpactTextView
                        android:id="@+id/offer_price_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textSize_price_item"
                        android:transitionName="@string/transitionName_price"
                        tools:text="5,50 €" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/sticky_header_detail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/sticky_image_offer_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_image_detail"
                android:layout_marginBottom="-105dp"
                android:scaleType="centerCrop"
                android:src="@drawable/legendario" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

                <es.bsalazar.secretcafe.utils.ImpactTextView
                    android:id="@+id/sticky_name_offer_detail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/gray_gradient"
                    android:padding="16dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:transitionName="@string/transitionName_name"
                    tools:text="Legendario" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/accent_gradient" />

            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>