<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="160dp"
                        android:layout_height="160dp">

                        <ImageView
                            android:id="@+id/meal_image"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:src="@drawable/default_image"
                            android:scaleType="centerCrop"
                            tools:ignore="RtlSymmetry" />

                        <LinearLayout
                            android:layout_width="22dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:background="@drawable/overrride_drink_image_shape_gray"/>
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <!--NAME-->
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:textColorHint="@color/colorPrimaryExtraLight">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/meal_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:lines="1"
                                android:textColor="@color/white" />

                        </android.support.design.widget.TextInputLayout>

                        <!--PRICE-->
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/price"
                            android:textColorHint="@color/colorPrimaryExtraLight">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/meal_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionNext"
                                android:inputType="numberDecimal"
                                android:lines="1"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>

                <!--Description-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:hint="@string/description"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/colorPrimaryExtraLight">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/meal_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textMultiLine"
                        android:textColor="@color/white" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <include layout="@layout/save_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alphaColorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>
